fix list group element reference to list group